重构长任务运行时 / Unify long-task runtime
将蓝图准备与执行、漏斗收集和已放置方块回收迁入 Full Task Engine 的统一数量/纳秒预算，删除旧 TickablePipeline 运行时，并补齐会话持久化与工具租约交接回滚策略。

Move blueprint preparation/execution, funnel collection, and placed-block recovery under the Full Task Engine budget; remove the legacy tickable runtime and add session persistence plus explicit tool-lease handoff rollback policy.